--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -8,10 +8,15 @@
         android:layout_height="match_parent"
         tools:context=".activities.EditRuleActivity">
 
-    <androidx.recyclerview.widget.RecyclerView
+    <EditText
+            android:id="@+id/app_search_bar"
             android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:hint="Search apps"/>
+
+    <androidx.recyclerview.widget.RecyclerView
+            android:layout_width="329dp"
             android:id="@+id/app_card_recycler"
-            android:layout_height="match_parent"
-            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="parent"/>
+            android:layout_height="479dp"
+            tools:layout_editor_absoluteX="41dp" app:layout_constraintTop_toBottomOf="@+id/app_search_bar"/>
 </androidx.constraintlayout.widget.ConstraintLayout>
