--- a/app/src/main/res/layout/component_app_select_card.xml
+++ b/app/src/main/res/layout/component_app_select_card.xml
@@ -6,18 +6,19 @@
                                    android:backgroundTint="?attr/colorOnSecondary"
                                    app:cardCornerRadius="10dp"
 
-                                   android:layout_margin="10dp"
+                                   android:layout_marginHorizontal="10dp"
+                                   android:layout_marginVertical="5dp"
                                    android:id="@+id/rule_card">
 
 
     <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:padding="4dp">
+            android:padding="2dp">
 
         <ImageView
-                android:layout_width="36dp"
-                android:layout_height="36dp"
+                android:layout_width="34dp"
+                android:layout_height="34dp"
                 android:layout_margin="6dp"
                 app:srcCompat="@drawable/ic_launcher_background"
                 android:id="@+id/app_card_icon" app:layout_constraintStart_toStartOf="parent"
