--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -8,15 +8,34 @@
         android:layout_height="match_parent"
         tools:context=".activities.EditRuleActivity">
 
-    <EditText
-            android:id="@+id/app_search_bar"
+    <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:hint="Search apps"/>
+            android:layout_height="match_parent">
 
-    <androidx.recyclerview.widget.RecyclerView
-            android:layout_width="329dp"
-            android:id="@+id/app_card_recycler"
-            android:layout_height="479dp"
-            tools:layout_editor_absoluteX="41dp" app:layout_constraintTop_toBottomOf="@+id/app_search_bar"/>
+        <EditText
+                android:id="@+id/app_search_bar"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:hint="Search apps"
+                android:layout_margin="10dp"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_bias="0.0" app:layout_constraintTop_toBottomOf="@+id/textView"/>
+        <androidx.recyclerview.widget.RecyclerView
+                android:id="@+id/app_card_recycler"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_margin="10dp"
+                app:layout_constraintTop_toBottomOf="@+id/app_search_bar" app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent"/>
+        <TextView
+                android:text="Installed Apps"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:textSize="28dp"
+                android:layout_margin="14dp"
+                android:id="@+id/textView"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"/>
+    </androidx.constraintlayout.widget.ConstraintLayout>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
