Added App select activity and an unfinished rule edit activity

--- a/app/src/main/res/layout/component_rule.xml
+++ b/app/src/main/res/layout/component_rule.xml
@@ -24,12 +24,11 @@
         <TextView
                 android:text="TextView"
                 android:textSize="18dp"
-                android:layout_marginLeft="5dp"
-                android:layout_marginRight="60dp"
-                android:layout_width="match_parent"
+                android:layout_margin="5dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/rule_name"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/rule_switch"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
