--- a/app/src/main/res/layout/component_app_select_card.xml
+++ b/app/src/main/res/layout/component_app_select_card.xml
@@ -26,12 +26,12 @@
         <TextView
                 android:text="App Name"
                 android:textSize="20dp"
-                android:layout_marginLeft="52dp"
-                android:layout_marginRight="52dp"
-                android:layout_width="match_parent"
+                android:layout_margin="10dp"
+                android:layout_width="0dp"
                 android:layout_height="wrap_content" android:id="@+id/app_card_name"
                 app:layout_constraintStart_toEndOf="@+id/app_card_icon" app:layout_constraintTop_toTopOf="parent"
-                app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/app_card_checkbox"/>
         <CheckBox
                 android:text=""
                 android:layout_width="wrap_content"
