--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -20,7 +20,7 @@
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:padding="6dp"
                 android:layout_width="match_parent"
-                android:layout_height="match_parent">
+                android:layout_height="wrap_content">
 
             <TextView
                     android:text="Rule Name"
@@ -42,7 +42,7 @@
 
     <androidx.cardview.widget.CardView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content" tools:layout_editor_absoluteX="1dp"
+            android:layout_height="wrap_content"
             app:layout_constraintTop_toBottomOf="@+id/cardView2" android:id="@+id/cardView3"
             android:backgroundTint="?attr/colorOnSecondary"
             android:layout_margin="6dp">
@@ -51,21 +51,47 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent">
 
-            <TextView
-                    android:text="Apply To All Apps"
-                    android:layout_width="0dp"
-                    android:layout_margin="12dp"
-                    android:textSize="18dp"
-                    android:layout_height="wrap_content" android:id="@+id/edit_rule_apply_to_apps"
-                    app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toStartOf="@+id/edit_rule_add_apps"/>
-            <ImageButton
-                    android:backgroundTint="#0000"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content" app:srcCompat="@drawable/baseline_add_24"
-                    android:id="@+id/edit_rule_add_apps" app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/constraintLayout2">
+
+                <TextView
+                        android:text="Apply To All Apps"
+                        android:layout_width="0dp"
+                        android:layout_margin="12dp"
+                        android:textSize="18dp"
+                        android:layout_height="wrap_content" android:id="@+id/edit_rule_apply_to_apps"
+                        app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintTop_toTopOf="parent"
+                        app:layout_constraintStart_toStartOf="parent"
+                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_add_apps"/>
+                <ImageButton
+                        android:backgroundTint="#0000"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content" app:srcCompat="@drawable/baseline_add_24"
+                        android:id="@+id/edit_rule_add_apps" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+            </androidx.constraintlayout.widget.ConstraintLayout>
+
+            <androidx.constraintlayout.widget.ConstraintLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" android:id="@+id/edit_rule_app_display_container"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintTop_toBottomOf="@+id/constraintLayout2"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
+
+
+                <androidx.recyclerview.widget.RecyclerView
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_marginHorizontal="6dp"
+                        android:layout_marginBottom="6dp"
+                        android:id="@+id/edit_rule_selected_apps_recycler"
+                        app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                        app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
@@ -119,7 +145,7 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:id="@+id/edit_rule_add_keywords_container"
-                        android:layout_height="match_parent" app:layout_constraintTop_toBottomOf="@+id/edit_rule_keyword_chip_container">
+                        android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/edit_rule_keyword_chip_container">
 
                     <EditText
                             android:layout_width="0dp"
