--- a/app/src/main/res/layout/activity_app_select.xml
+++ b/app/src/main/res/layout/activity_app_select.xml
@@ -17,7 +17,8 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:hint="Search apps"
-                android:layout_margin="10dp"
+                android:layout_marginVertical="10dp"
+                android:layout_marginLeft="10dp"
                 app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintTop_toBottomOf="@+id/textView"
                 app:layout_constraintEnd_toStartOf="@+id/app_select_active_checkbox"/>
@@ -46,7 +47,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"/>
         <CheckBox
                 android:text=""
-                android:layout_marginRight="10dp"
+                android:layout_marginRight="12dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/app_select_active_checkbox"
                 app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toBottomOf="@+id/textView"
