--- a/app/src/main/res/layout/component_rule.xml
+++ b/app/src/main/res/layout/component_rule.xml
@@ -2,12 +2,12 @@
 <androidx.cardview.widget.CardView
         xmlns:android="http://schemas.android.com/apk/res/android"
         xmlns:app="http://schemas.android.com/apk/res-auto"
-        android:layout_width="match_parent"
+        xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:backgroundTint="?attr/colorOnSecondary"
         app:cardCornerRadius="10dp"
 
-        android:layout_margin="10dp"
+        android:layout_marginVertical="10dp"
         android:id="@+id/rule_card">
 
 
@@ -17,10 +17,11 @@
             android:padding="10dp">
         <Switch
                 android:text=""
+                android:layout_marginRight="5dp"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content" android:id="@+id/rule_switch"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+                app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@+id/rule_delete_button"/>
         <TextView
                 android:text="TextView"
                 android:textSize="18dp"
@@ -29,6 +30,15 @@
                 android:layout_height="wrap_content" android:id="@+id/rule_name"
                 app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
                 app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toStartOf="@+id/rule_switch"/>
+        <ImageButton
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:padding="0dp"
+                android:backgroundTint="#0000"
+                app:srcCompat="@drawable/baseline_delete_forever_24"
+                android:id="@+id/rule_delete_button"
+                app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintBottom_toBottomOf="parent"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 
 </androidx.cardview.widget.CardView>
