--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -103,7 +103,8 @@
             app:layout_constraintTop_toBottomOf="@+id/cardView3" app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:backgroundTint="?attr/colorOnSecondary"
-            android:layout_margin="6dp">
+            android:layout_margin="6dp" android:id="@+id/cardView4">
+
         <androidx.constraintlayout.widget.ConstraintLayout
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
@@ -155,7 +156,8 @@
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:id="@+id/edit_rule_add_keywords_container"
-                        android:layout_height="wrap_content" app:layout_constraintTop_toBottomOf="@+id/edit_rule_keyword_chip_container">
+                        android:layout_height="wrap_content"
+                        app:layout_constraintTop_toBottomOf="@+id/edit_rule_keyword_chip_container">
 
                     <EditText
                             android:layout_width="0dp"
@@ -189,6 +191,72 @@
             android:layout_height="wrap_content"
             android:clickable="true" app:srcCompat="@drawable/baseline_save_24" android:id="@+id/edit_rule_save_button"
             app:layout_constraintEnd_toEndOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
+
+
+    <androidx.cardview.widget.CardView
+            android:layout_width="match_parent"
+            android:layout_height="match_parent"
+            android:translationZ="10dp"
+            android:id="@+id/edit_rule_name_popup"
+            android:backgroundTint="#80000000"
+            android:visibility="gone"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toBottomOf="parent">
+        <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent">
+
+            <androidx.cardview.widget.CardView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    app:layout_constraintEnd_toEndOf="parent"
+                    app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="parent"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    android:backgroundTint="?attr/colorOnSecondary">
+                <androidx.constraintlayout.widget.ConstraintLayout
+                        android:layout_width="wrap_content"
+                        android:padding="10dp"
+                        android:layout_height="match_parent">
+
+                    <EditText
+                            android:layout_width="280dp"
+                            android:layout_height="wrap_content"
+                            android:inputType="text"
+                            android:layout_marginVertical="10dp"
+                            android:text=""
+                            android:hint="Rule Name"
+                            android:ems="10"
+                            android:id="@+id/edit_rule_name_input"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toBottomOf="@+id/textView9"
+                            app:layout_constraintEnd_toEndOf="parent"/>
+                    <TextView
+                            android:text="Rule Name"
+                            android:textSize="22dp"
+                            android:layout_marginLeft="2dp"
+                            android:textStyle="bold"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/textView9"
+                            app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"/>
+                    <Button
+                            android:text="Save"
+                            android:layout_marginTop="5dp"
+                            android:layout_marginRight="5dp"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content" android:id="@+id/edit_rule_name_save_button"
+                            app:layout_constraintTop_toBottomOf="@+id/edit_rule_name_input"
+                            app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent"/>
+
+                </androidx.constraintlayout.widget.ConstraintLayout>
+            </androidx.cardview.widget.CardView>
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+
+
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
