--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -217,13 +217,18 @@
                     app:layout_constraintEnd_toEndOf="parent">
 
 
-                <androidx.recyclerview.widget.RecyclerView
+                <LinearLayout
+                        android:orientation="horizontal"
                         android:layout_width="match_parent"
-                        android:layout_margin="4dp"
-                        android:layout_height="1dp"
-                        android:visibility="gone"
+                        android:padding="4dp"
+                        android:id="@+id/edit_rule_vibration_step_container"
+                        android:layout_height="wrap_content"
                         app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
-                        app:layout_constraintStart_toStartOf="parent"/>
+                        app:layout_constraintStart_toStartOf="parent">
+
+
+                </LinearLayout>
+
                 <TextView
                         android:text="Vibration"
                         android:layout_height="wrap_content"
@@ -282,7 +287,7 @@
                             android:backgroundTint="#0000"
                             android:padding="4dp"
                             android:layout_width="wrap_content"
-                            android:layout_height="wrap_content" app:srcCompat="@drawable/baseline_notifications_24"
+                            android:layout_height="wrap_content" app:srcCompat="@drawable/baseline_keyboard_arrow_right_24"
                             android:id="@+id/imageButton" app:layout_constraintEnd_toEndOf="parent"
                             app:layout_constraintTop_toTopOf="parent" app:layout_constraintBottom_toBottomOf="parent"/>
                 </androidx.constraintlayout.widget.ConstraintLayout>
