--- a/app/src/main/res/layout/activity_edit_rule.xml
+++ b/app/src/main/res/layout/activity_edit_rule.xml
@@ -217,17 +217,25 @@
                     app:layout_constraintEnd_toEndOf="parent">
 
 
-                <LinearLayout
-                        android:orientation="horizontal"
+                <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
-                        android:padding="4dp"
-                        android:id="@+id/edit_rule_vibration_step_container"
-                        android:layout_height="wrap_content"
-                        app:layout_constraintTop_toBottomOf="@+id/textView11" app:layout_constraintEnd_toEndOf="parent"
+                        android:layout_height="wrap_content" android:id="@+id/edit_rule_edit_vibration_container"
+                        app:layout_constraintTop_toBottomOf="@+id/edit_rule_toggle_vibration_switch"
+                        app:layout_constraintEnd_toEndOf="parent"
                         app:layout_constraintStart_toStartOf="parent">
 
+                    <LinearLayout
+                            android:orientation="horizontal"
+                            android:layout_width="match_parent"
+                            android:layout_margin="4dp"
+                            android:id="@+id/edit_rule_vibration_step_container"
+                            android:layout_height="wrap_content" app:layout_constraintTop_toTopOf="parent"
+                            app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent"
+                            app:layout_constraintBottom_toBottomOf="parent">
 
-                </LinearLayout>
+
+                    </LinearLayout>
+                </androidx.constraintlayout.widget.ConstraintLayout>
 
                 <TextView
                         android:text="Vibration"
@@ -237,12 +245,12 @@
                         android:layout_margin="4dp"
                         android:id="@+id/textView11"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_vibration_button"/>
+                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_vibration_switch"/>
                 <Switch
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="4dp"
-                        android:id="@+id/edit_rule_toggle_vibration_button"
+                        android:id="@+id/edit_rule_toggle_vibration_switch"
                         app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
             </androidx.constraintlayout.widget.ConstraintLayout>
 
@@ -261,18 +269,19 @@
                         android:layout_margin="4dp"
                         android:id="@+id/textView16"
                         app:layout_constraintTop_toTopOf="parent" app:layout_constraintStart_toStartOf="parent"
-                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_sound_button"/>
+                        app:layout_constraintEnd_toStartOf="@+id/edit_rule_toggle_sound_switch"/>
                 <Switch
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_margin="4dp"
-                        android:id="@+id/edit_rule_toggle_sound_button"
+                        android:id="@+id/edit_rule_toggle_sound_switch"
                         app:layout_constraintEnd_toEndOf="parent" app:layout_constraintTop_toTopOf="parent"/>
                 <androidx.constraintlayout.widget.ConstraintLayout
                         android:layout_width="match_parent"
                         android:layout_height="match_parent"
+                        android:id="@+id/edit_rule_edit_sound_container"
                         android:layout_margin="4dp"
-                        app:layout_constraintTop_toBottomOf="@+id/edit_rule_toggle_sound_button"
+                        app:layout_constraintTop_toBottomOf="@+id/edit_rule_toggle_sound_switch"
                         app:layout_constraintStart_toStartOf="parent" app:layout_constraintEnd_toEndOf="parent">
 
                     <TextView
